samples/_failures_safe/1761328926_b6d339_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_35cc86cc.c: In function ‘token_type_to_string’:
./samples/SAFE/__tmp_35cc86cc.c:175:9: error: expected expression at end of input
  175 |         default: return
      |         ^~~~~~~
./samples/SAFE/__tmp_35cc86cc.c:175:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_35cc86cc.c:175:9: error: expected declaration or statement at end of input
